# auto-poster

./: README.md
.github/workflows/: main.yml
backend/: .gitignore  README.md  package-lock.json
backend/lib/: backend-stack.ts
backend/lib/lambdas/addPost/: Cargo.toml
backend/lib/lambdas/addPost/src/: main.rs
backend/lib/lambdas/addScheduledPost/: Cargo.toml
backend/lib/lambdas/addScheduledPost/src/: main.rs
backend/lib/lambdas/editPost/: Cargo.toml
backend/lib/lambdas/editPost/src/: main.rs
backend/lib/lambdas/generatePosts/: Cargo.toml
backend/lib/lambdas/generatePosts/src/: main.rs
backend/lib/lambdas/getPosts/: Cargo.toml
backend/lib/lambdas/getPosts/src/: main.rs
backend/lib/lambdas/postToDeso/: Cargo.toml
backend/lib/lambdas/postToDeso/src/: main.rs
backend/lib/lambdas/postToTwitter/: Cargo.toml
backend/lib/lambdas/postToTwitter/src/: main.rs
backend/lib/lambdas/sendPosts/: Cargo.toml
backend/lib/lambdas/sendPosts/src/: main.rs
frontend/webapp/: README.md  package-lock.json
frontend/webapp/src/: App.css  App.js
frontend/webapp/src/components/: EditablePosts.css  EditablePosts.js  PostForm.js  ScheduledPostForm.js
