[package]
name = "postToDeso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.64"
tokio = {version = "1", features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }
tokio-test = "0.4.2"
lambda_http = "0.8.1"
deso-sdk = "0.1.1"
aws-sdk-dynamodb = "0.28.0"
aws-config = "0.55.3"
aws-sdk-sns = "0.28.0"
aws_lambda_events = "0.15.1"
chrono = "0.4.38"
dotenv = "0.15.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
