[package]
name = "postToTwitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.64"
tokio = {version = "1", features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }
tokio-test = "0.4.2"
lambda_http = "0.8.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
