[package]
name = "postToTwitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.8.1"
serde = "1.0.136"
serde_json = "1.0.64"
tokio = {version = "1", features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }
tokio-test = "0.4.2"
lambda_http = "0.8.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
oauth1 = "1.0.0"
dotenv = "0.15.0"
chrono = "0.4.38"
aws_lambda_events = "0.15.1"
oauth1-header = "0.1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
